# TokenBank

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: backend_policy.yaml  backend_registry.yaml  capacity_registry.yaml  data_policy.yaml  egress_policy.yaml  provider_policy.yaml  redaction_policy.yaml  runtime.yaml  sandbox_profile.yaml
docs/: CAPABILITY_NODES.md  DASHBOARD_LOCAL_AUDIT.md  LEDGER_AND_AUDIT.md  MCP_SERVER.md  PRIVATE_AGENT_CAPACITY_NETWORK.md  PUBLIC_ALPHA_PACKAGE.md  SECURITY_MODEL.md  TESTING.md  WORKLOAD_SOURCES.md  XRADAR_BATCH_ADAPTER.md
routebook/: ROUTEBOOK_README.md  backend_classes.yaml  fallback_rules.yaml  forbidden_routes.yaml  policy_hints.yaml  task_levels.yaml  task_types.yaml  verifier_mapping.yaml
schemas/: account_snapshot.schema.json  assignment.schema.json  audit_receipt.schema.json  backend_error.schema.json  backend_health.schema.json  backend_manifest.schema.json  capacity_node.schema.json  capacity_node_health.schema.json  capacity_profile.schema.json  execution_attempt.schema.json  host_cost_quality_summary.schema.json  host_result_summary.schema.json  policy_decision.schema.json  route_candidate.schema.json  route_decision_trace.schema.json  route_plan.schema.json  route_scoring_report.schema.json  task_analysis_report.schema.json  task_profile.schema.json  usage_ledger_entry.schema.json  usage_record.schema.json  verifier_report.schema.json  work_unit.schema.json  work_unit_result_envelope.schema.json
tests/: __init__.py
(+227 files in other folders)
